syntax = "proto3";

package Chat;

message RegisterRequest {
    string clientId = 1;
}

message RegisterResponse {
}

message BroadcastRequest {
    string message = 1;
    string clientID = 2;
}

message BroadcastResponse {
    string message = 1;
    string clientId = 2;
}

service Chat {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Broadcast(stream BroadcastRequest) returns (stream BroadcastResponse) {}
}